# web_module_11

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 30bac92e1aa6_add_roles.py  c3a863802656_init.py  f939c31d4d79_initial.py
src/: alembic.ini  schemas.py
src/conf/: config.ini
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  roles.py
templates/: index.html
