[tool.poetry]
name = "fastapi_lesson"
version = "0.1.0"
description = ""
authors = ["Oiseauoui <oiseua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.6"
pydantic = {extras = ["email"], version = "^2.5.3"}
alembic = "^1.13.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
